--- a/style.css
+++ b/style.css
@@ -8,12 +8,17 @@ body{
     width: 100%;
     background-color: #faf5f0;
     font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
+    
 }
 .container{
     width: 100%;
     height: 100vh;
     
     
+}
+.section-1{
+    width: 100%;
+    height: 100vh;
 }
 nav{
     width: 100%;
@@ -52,12 +57,16 @@ nav{
     font-weight: 600;
     text-transform: uppercase;
     color: #101010;
+    display: flex;
+    
     
 
 }
+
 li{
     list-style: none;
     margin-bottom: 10px;
+    
    
 }
 .left__side{
@@ -68,12 +77,12 @@ li{
     
     
 }
-a:hover{
-    color: #2c7365;
-    
-}
+
 .li-1 img{
     display: none;
+}
+.li-1:hover img{
+    display: block;
 }
 
 .left__side ul{
@@ -93,6 +102,7 @@ a:hover{
     font-size: 14px;
     font-weight: 600;
     color: #101010;
+    display: flex;
 }
 .left__side .end{
     font-size: 16px;
@@ -129,3 +139,85 @@ a:hover{
 .left__side .li-2{
     padding-right: 23%;
 }
+.hero{
+    height: 85vh;
+    max-width: 85%;
+    margin: 0 7.5%;
+    border-top: 1px solid #000 ;
+    border-bottom: 1px solid #000 ;
+    padding: 0 5%;
+    display: flex;
+    
+}
+.section-1__text-holder{
+    width: 80%;
+    height: 60%;
+    position: relative;
+    top: 20%;
+    line-height: 5em;
+    z-index: 1;
+
+}
+
+.section-1__text-holder h3{
+    font-size: 5rem;
+    font-weight: 400;
+    
+}
+.section-1__text-holder h2{
+    font-size: 5rem;
+    padding-left: 20%;
+}
+.bolder{
+    position: relative;
+    left: 28%;
+
+}
+.img-holder{
+    width: 80%;
+    height: 100%;
+    display: flex;
+    padding: 3% 0;
+    padding-left: 5%;
+}
+.second__img{
+    width: 88%;
+    height: 95%;
+    background-image: url(hero_02.jpg);
+    background-size: cover;
+    background-position: 100% 100%;
+    position: relative;
+    top: 5%;
+
+}
+
+.first__img{
+    width: 30%;
+    height: 80%;
+    position: relative;
+    top: 12%;
+    background-image: url(hero_01.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    margin-right: 34px;
+   
+    
+}
+.hover-1{
+     background-color: #0e4d31;
+     height: 100%;
+    
+    width: 100%;
+    opacity: 75%;
+}
+.hover-1:hover{
+    opacity: 0;
+    background-color: transparent;
+}
+
+.text-1{
+    position: relative;
+    left: -1em;
+}
+
