--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 body{
     height: 100vh;
     width: 100%;
@@ -145,13 +146,13 @@ li{
     margin: 0 7.5%;
     border-top: 1px solid #000 ;
     border-bottom: 1px solid #000 ;
-    padding: 0 5%;
+    padding: 0 3%;
     display: flex;
     
 }
 .section-1__text-holder{
     width: 80%;
-    height: 60%;
+    height: 50%;
     position: relative;
     top: 20%;
     line-height: 5em;
@@ -174,11 +175,13 @@ li{
 
 }
 .img-holder{
-    width: 80%;
+    width: 100%;
     height: 100%;
     display: flex;
     padding: 3% 0;
-    padding-left: 5%;
+    position: relative;
+    left: 3em;
+    
 }
 .second__img{
     width: 88%;
@@ -190,6 +193,7 @@ li{
     top: 5%;
 
 }
+
 
 .first__img{
     width: 30%;
@@ -211,13 +215,64 @@ li{
     width: 100%;
     opacity: 75%;
 }
+
 .hover-1:hover{
     opacity: 0;
     background-color: transparent;
+    transition: 1s;
+    transform: translateY(-100%);
+    transition-timing-function: ease-in-out;
 }
+.hover-2{
+    background-color: #0e4d31;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
 
+}
+.hover-2:hover{
+    background-color: #0e4d31;
+    height: 100%;
+   width: 100%;
+   opacity: 75%;
+   animation: slide 1s ease-in-out .5s ;
+
+}
 .text-1{
     position: relative;
     left: -1em;
 }
-
+@keyframes slide {
+    0%{
+        transform: translateY(0%);
+    }
+    100%{
+        transform: translateY(100%);
+    }
+    
+}
+.lecture{
+    width: 20%;
+    position: absolute;
+    top: 640px;
+    height: 6.5em;
+    display: flex;
+}
+.square-container{
+    width: 30%;
+}
+.numbers{
+    width: 100%;
+    height: 100%;
+    background-image: url(lecture_triangle-01.svg);
+    background-repeat: no-repeat;
+    background-color: #101010;
+}
+.numbers:hover{
+    width: 100%;
+    height: 100%;
+    background-image: url(lecture_triangle-02.svg);
+    background-repeat: no-repeat;
+    background-color: #101010;
+    transition-delay: .3s ;
+}
