--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ li{
 .section-1__text-holder h3{
     font-size: 5rem;
     font-weight: 400;
-    
+    position: relative;
 }
 .section-1__text-holder h2{
     font-size: 5rem;
@@ -173,6 +173,9 @@ li{
     position: relative;
     left: 28%;
 
+}
+.h2{
+    position: relative;
 }
 .img-holder{
     width: 100%;
@@ -191,6 +194,7 @@ li{
     background-position: 100% 100%;
     position: relative;
     top: 5%;
+    margin-right: 100px;
 
 }
 
@@ -275,4 +279,21 @@ li{
     background-repeat: no-repeat;
     background-color: #101010;
     transition-delay: .3s ;
+}
+.text__lecture{
+    height: 100%;
+    width: 100%;
+    line-height: 20px;
+    padding-left: 2em;
+}
+.text__lecture p{
+    font-size: 1rem;
+    color: rgba(16,16,16,.6);
+    margin-top: 10px;
+}
+.text__lecture h5{
+    font-size: 22px;
+    margin-top: 17px;
+    letter-spacing: .05em;
+    line-height: 1.2em;
 }
